# docker_moveit2-AprilTag

./: .gitignore  PROJECT_STRUCTURE.md  README.md  apriltag_map.json  test_moveit2.md  world_calibration.json
.github/workflows/: docker-build.yml
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  run.sh  stop.sh
ros2_ws/src/AprilTag_ROS2__Intel-D435/: .gitignore  CMakeLists.txt  Makefile  QUICKSTART.md  README.md  STRUCTURE.md  package.xml
ros2_ws/src/AprilTag_ROS2__Intel-D435/config/: apriltag_map.json  target_location_tag3.json
ros2_ws/src/AprilTag_ROS2__Intel-D435/docker_config/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-setup.sh
ros2_ws/src/AprilTag_ROS2__Intel-D435/docs/: APRILTAG_DETECTOR_SUMMARY.md  DOCKER_SETUP.md  PROJECT_INDEX.md  README.md  ROS2_SETUP.md  SETUP_GUIDE.md
ros2_ws/src/AprilTag_ROS2__Intel-D435/ros2_ws/: apriltag_map.json
ros2_ws/src/AprilTag_ROS2__Intel-D435/ros2_ws/src/apriltag_detector/: QUICK_START.md  README.md  package.xml  pyproject.toml  setup.cfg  setup.py  test_package.py
ros2_ws/src/AprilTag_ROS2__Intel-D435/ros2_ws/src/apriltag_detector/apriltag_detector/: __init__.py  apriltag_map.py  camera_position_validator.py  record_calibration_data.py
ros2_ws/src/AprilTag_ROS2__Intel-D435/ros2_ws/src/apriltag_detector/docs/screenshots/: README.md
ros2_ws/src/AprilTag_ROS2__Intel-D435/ros2_ws/src/apriltag_detector/resource/: apriltag_detector
ros2_ws/src/AprilTag_ROS2__Intel-D435/ros2_ws/src/apriltag_tf_converter/: package.xml  setup.cfg  setup.py
ros2_ws/src/AprilTag_ROS2__Intel-D435/ros2_ws/src/apriltag_tf_converter/apriltag_tf_converter/: apriltag_tf_converter_node.py
ros2_ws/src/AprilTag_ROS2__Intel-D435/scripts/: LOCATE_TARGET_README.md  apriltag_map.json  camera-position_validator.py  camera_position_validation.py  locate_the_target.py  my_camera_apriltag.py  record_calibration_data.py  setup_apriltag_detector.sh  verify-ros2-setup.sh
ros2_ws/src/apriltag_robot_control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/apriltag_robot_control/apriltag_robot_control/: __init__.py
ros2_ws/src/apriltag_robot_control/config/: no_arm_with_planner.rviz  params.yaml
ros2_ws/src/apriltag_robot_control/launch/: apriltag_grasp.launch.py  full_system.launch.py  pipeline.launch.py
ros2_ws/src/apriltag_robot_control/scripts/: apriltag_grasp_demo.py  apriltag_pipeline.py  moveit2_interface.py  moveit_grasp_controller.py  target_detector.py  world_frame_calibration.py
ros2_ws/src/interbotix_ros_core/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/interbotix_ros_core/install/interbotix_xs_msgs/share/interbotix_xs_msgs/: package.bash  package.zsh
ros2_ws/src/interbotix_ros_core/interbotix_ros_slate/trossen_slate/: CMakeLists.txt  README.md  package.xml  pyproject.toml
ros2_ws/src/interbotix_ros_core/interbotix_ros_slate/trossen_slate/cmake/: Version.cmake  version.hpp.in
ros2_ws/src/interbotix_ros_core/interbotix_ros_slate/trossen_slate/demo/: advanced_demo.cpp  basic_demo.cpp
ros2_ws/src/interbotix_ros_core/interbotix_ros_slate/trossen_slate/include/trossen_slate/: base_driver.hpp  serial_driver.hpp  trossen_slate.hpp
ros2_ws/src/interbotix_ros_core/interbotix_ros_slate/trossen_slate/python/: pytrossen_slate.cpp
ros2_ws/src/interbotix_ros_core/interbotix_ros_slate/trossen_slate/python/pytrossen_slate/demo/: advanced_demo.py  basic_demo.py
ros2_ws/src/interbotix_ros_core/interbotix_ros_slate/trossen_slate/src/: base_driver.cpp  trossen_slate.cpp
ros2_ws/src/interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_driver/include/interbotix_xs_driver/: xs_common.hpp  xs_driver.hpp
ros2_ws/src/interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_driver/src/: xs_driver.cpp
ros2_ws/src/interbotix_ros_core/log/: latest_build
ros2_ws/src/interbotix_ros_manipulators/install/: local_setup.sh  setup.sh
ros2_ws/src/interbotix_ros_manipulators/install/interbotix_xsarm_control/share/interbotix_xsarm_control/: local_setup.sh  package.sh
ros2_ws/src/interbotix_ros_manipulators/install/interbotix_xsarm_descriptions/share/interbotix_xsarm_descriptions/: local_setup.sh  package.sh
ros2_ws/src/interbotix_ros_manipulators/install/interbotix_xsarm_sim/share/interbotix_xsarm_sim/: package.sh
ros2_ws/src/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_control/demos/: ee_control.py
ros2_ws/src/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_control/launch/: xsarm_control.launch.py
ros2_ws/src/interbotix_ros_manipulators/log/: latest_build
ros2_ws/src/vlservo/: setup.py
ros2_ws/src/vlservo/VLServo/: d435_helpers.py  send_d435_images.py  vlservoing.py  white_point.py  yolo_networking.py
ros2_ws/src/vlservo/config/: aruco_marker_info.yaml
