[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pytrossen_slate"
version = "1.0.0"
description = "A Python wrapper for the trossen_slate C++ library"
readme = "README.md"
license = { text = "BSD 3-Clause" }
authors = [
    { name = "Grayson Arendt", email = "trsupport@trossenrobotics.com" },
]
