<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_detector</name>
  <version>0.1.0</version>
  <description>AprilTag detection and camera position validation with Intel D435 camera</description>

  <maintainer email="gwchen24@gmail.com">David</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Python dependencies (already installed via pip) -->
  <!-- opencv-python -->
  <!-- numpy -->
  <!-- pyrealsense2 -->
  <!-- dt-apriltags -->
  <!-- scipy -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
